--- a/package.json
+++ b/package.json
@@ -2,6 +2,19 @@
   "name": "beeetrack-javascript-test",
   "version": "1.0.0",
   "devDependencies": {
-    "json-server": "^0.11.2"
+    "json-server": "^0.11.2",
+    "react-scripts": "^1.0.17"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
